# 42-cursus

./: .gitignore
02_push_swap/: Makefile  push_swap  push_swap.c  push_swap.h  utils.c  validate_args.c
fdf/: .clangd  Makefile
ft_printf/: Makefile  ft_itoa_base.c  ft_printf.c  ft_printf.h  ft_printf_cspudi.c  ft_printf_cspui.c  ft_printf_format.c  ft_printf_format_hashtag.c  ft_printf_format_precision.c  ft_printf_format_space_plus.c  ft_printf_get_strings.c  ft_printf_itoa_base.c  ft_printf_parser.c  ft_printf_print.c  ft_printf_uhex.c  libftprintf.h  print_pointers.c  utils.c
get_next_line/: example.txt  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstclear.c  ft_lstdelone.c  ft_lstmap.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
minishell/: .clangd  CMakeLists.txt  Makefile  minishell.excalidraw  readline.supp
minishell/include/: ft_printf.h  get_next_line.h  libft.h  minishell.h
minishell/lib/libft/: CMakeLists.txt  Makefile
minishell/lib/libft/src/: get_next_line.c
minishell/lib/libft/src/ft_printf/: ft_printf.c  ft_printf_print.c  ft_uitoa.c
minishell/src/: command.c  env.c  libft_plus.c  main.c  utils.c
minishell/src/builtin/: cd.c  echo.c  exit.c
minishell/src/command/: cmd_exec.c  cmd_init.c
minishell/test/: test_minishell.cpp
pipex/: pipex  (+5 more)
(+183 files in other folders)
